2012-01-XX  Peter Schueller <ps@kr.tuwien.ac.at>

	Porting to dlvhex 2.0.0.

2011-03-19  xiriel TODO

	Implementation of Saturation Encoding for calculating explanations.

2011-01-11  Peter Schueller <ps@kr.tuwien.ac.at>

	* include/ContextInterfacePlugin.h: Workaround for clang issue (not sure
	if gcc or clang bug). http://llvm.org/bugs/show_bug.cgi?id=8952

2010-10-03  Peter Schueller <ps@kr.tuwien.ac.at>

	* include/BaseContextAtom.h: Fixing bug with hardcoded
	input predicate names.

2010-10-03  Peter Schueller <ps@kr.tuwien.ac.at>

	* include/BaseContextAtom.h: Fixing bug with hardcoded
	input predicate names.

2010-10-13  Peter Schueller <ps@kr.tuwien.ac.at>

	* examples/Makefile.am: Fixing warning in make distcheck for one testcase.

2010-08-25  Peter Schueller <ps@kr.tuwien.ac.at>

	* src/OutputRewriter.cpp: Fixing bug with consistent systems
	and explanations.
	* examples/benchmark9/ddmeem_opeq.out: Fixing testcase.
	* examples/benchmark9/em.out: Likewise.
	* examples/benchmark9/e.out: Likewise.
	* examples/benchmark10/ddmeem_opeq.out: Likewise.
	* examples/benchmark10/em.out: Likewise.
	* examples/benchmark10/e.out: Likewise.

	* src/OutputRewriter.cpp: Fixing bug with multiple equilibria
	and subset-minimal diagnoses, including new testcase.
	* examples/medExample/master_plusloop.hex: Likewise.
	* examples/medExample/plusloop_dmem_opeq.out: Likewise.
	* examples/mcsequilibriumtests.test: Likewise.

2010-07-20  Peter Schueller <ps@kr.tuwien.ac.at>

	* Installing headers required to create custom context plugins.

2010-07-17  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	Release version 1.7.1.

	* configure.ac: Bump version to 1.7.1.

	* NEWS: Describe changes of version 1.7.1.

2010-07-14  Peter Schueller <ps@kr.tuwien.ac.at>

	* src/OutputRewriter.cpp: Updating to changed ASPSolver interface.
	* src/DLV_ASP_ContextAtom.cpp: Likewise.

2010-07-07  Peter Schueller <ps@kr.tuwien.ac.at>

	* src/OutputRewriter.cpp: Using new ASPSolver interface.