@@ -1,0 +1,6 @@
+Dm:({r1},{r6})
+Dm:({r1,r5},{})
+Dm:({r1,r3},{})
+Dm:({r1,r2},{})
+Em:({r2,r3,r5},{r6})
+Em:({r1},{})
