@@ -1,5 +1,6 @@
-Em:({r1,r2,r4},{r5})
-Dm:EQ:({r1},{}):({allergy_strong_ab},{blood_marker,xray_pneumonia},{},{})
-Dm:EQ:({r2},{}):({allergy_strong_ab},{blood_marker,xray_pneumonia},{pneumonia},{})
-Dm:EQ:({r4},{}):({allergy_strong_ab},{blood_marker,xray_pneumonia},{atyppneumonia,pneumonia},{})
-Dm:EQ:({},{r5}):({allergy_strong_ab},{blood_marker,xray_pneumonia},{atyppneumonia,pneumonia},{})
+Dm:EQ:({r1},{r6}):({allergy_strong_ab,person02031985},{blood_marker,xray_pneumonia},{atyppneumonia,bacterial_disease},{})
+Dm:EQ:({r1,r5},{}):({allergy_strong_ab,person02031985},{blood_marker,xray_pneumonia},{atyppneumonia,bacterial_disease},{})
+Dm:EQ:({r1,r3},{}):({allergy_strong_ab,person02031985},{blood_marker,xray_pneumonia},{bacterial_disease},{})
+Dm:EQ:({r1,r2},{}):({allergy_strong_ab,person02031985},{blood_marker,xray_pneumonia},{},{})
+Em:({r2,r3,r5},{r6})
+Em:({r1},{})
