@@ -1,9 +1,0 @@
-Em:({r1,r2,r4},{r5})
-Dm:EQ:({r1},{}):({allergy_strong_ab},{blood_marker,xray_pneumonia},{},{})
-Dm:EQ:({r1},{}):({allergy_strong_ab},{blood_marker,xray_pneumonia},{},{foo})
-Dm:EQ:({r2},{}):({allergy_strong_ab},{blood_marker,xray_pneumonia},{pneumonia},{})
-Dm:EQ:({r2},{}):({allergy_strong_ab},{blood_marker,xray_pneumonia},{pneumonia},{foo})
-Dm:EQ:({r4},{}):({allergy_strong_ab},{blood_marker,xray_pneumonia},{atyppneumonia,pneumonia},{})
-Dm:EQ:({r4},{}):({allergy_strong_ab},{blood_marker,xray_pneumonia},{atyppneumonia,pneumonia},{foo})
-Dm:EQ:({},{r5}):({allergy_strong_ab},{blood_marker,xray_pneumonia},{atyppneumonia,pneumonia},{})
-Dm:EQ:({},{r5}):({allergy_strong_ab},{blood_marker,xray_pneumonia},{atyppneumonia,pneumonia},{foo})
