@@ -1,6 +1,8 @@
-2012-01-XX  Peter Schueller <ps@kr.tuwien.ac.at>
+2012-06-17  Peter Schueller <ps@kr.tuwien.ac.at>
 
 	Porting to dlvhex 2.0.0.
+	(Includes refactoring, integration of OPEQ branch, new saturation encoding,
+	and new conversions diagnoses <-> explanations.)
 
 2011-03-19  xiriel TODO
 
